<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textView_text_titulo"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/et_codigo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/edittext_hint_codigo"
        android:importantForAutofill="no"
        android:inputType="number" />

    <EditText
        android:id="@+id/et_nombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:importantForAutofill="no"
        android:ems="10"
        android:hint="@string/edittext_hint_nombre"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/et_apellido"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/edittext_hint_apellido"
        android:importantForAutofill="no"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/et_telefono"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"

        android:hint="@string/edittext_hint_telefono"
        android:importantForAutofill="no"
        android:inputType="phone"
         />

    <EditText
        android:id="@+id/et_correo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:importantForAutofill="no"
        android:ems="10"
        android:hint="@string/edittext_hint_email"
        android:inputType="textEmailAddress"
      />

    <Button
        android:id="@+id/btn_agregar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="clicagregar"
        android:text="@string/button_text_agregar" />

    <Button
        android:id="@+id/btn_buscar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="clicbuscar"
        android:text="@string/button_text_buscar" />

    <Button
        android:id="@+id/btn_modificar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="clicmodificar"
        android:text="@string/button_text_modificar" />

    <Button
        android:id="@+id/btn_eliminar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="cliceliminar"
        android:text="@string/button_text_eliminar" />

    <Button
        android:id="@+id/btn_limpiar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="cliclimpiar"
        android:text="@string/button_text_limpiar" />

    <Button
        android:id="@+id/btn_mostrarContactos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="cliclmostrarcontactos"
        android:text="@string/button_text_mostrarContactos" />

</LinearLayout>